add endorsed to javadoc generation