@@ -284,6 +284,8 @@
                         <dependencySourceExcludes>
                             <dependencySourceExclude>com.sun.xml.ws:*</dependencySourceExclude>
                         </dependencySourceExcludes>
+                        <isOffline>${javadoc.links.offline}</isOffline>
+                        <additionalJOption>-J-Djava.endorsed.dirs=${endorsed.dir}</additionalJOption>
                         <offlineLinks>
                             <offlineLink>
                                 <url>http://docs.oracle.com/javase/6/docs/api/</url>
